prevents radial menu from getting cut off in FF

--- a/resources/assets/css/components/hud.less
+++ b/resources/assets/css/components/hud.less
@@ -35,6 +35,7 @@
   margin-left: -1em;
   margin-top: -1em;
   padding: 1rem;
+  overflow: visible;
 }
 .radial-button {
   cursor: pointer;
